--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -4,7 +4,7 @@ layout: default
 
 {% assign author_avatar = page.github | prepend: "http://github.com/" | append: ".png" %}
 
-<h1><img src="{{ author_avatar}}" style="border-radius:12px;height:25px" /> {{ page.name }}</h1>
+<h1><img src="{{ author_avatar}}" style="border-radius:12px;height:25px;margin-bottom:0;" /> {{ page.name }}</h1>
 <h2>{{ page.position }}</h2>
 
 {{ content }}
